# sample-rust-app-in-small-docker-image

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  init.sh  init.sql
src/: main.rs
src/database/: mod.rs  session.rs
src/sample/: sample_resource.rs
