[package]
name = "sample-rust-app-in-small-docker-image"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
